# streamlit_microprojects

./: .gitignore\  proj_bioinf_dna.py  proj_crypto.py  proj_eda_basketball.py  proj_football.py  proj_housing.py  proj_iris_classifier.py  proj_sp500.py  proj_yfinance.py  pyproject.toml  scrape.py  stocks.csv  utils.py
proj_penguins/: penguins_model_building.py  proj_penguins.py
proj_soluability/: solubility-app.py  solubility-web-app.py
ranhigs-test/: pyproject.toml
ranhigs-test/tests/: test_ranhigs_test.py
